XXXX-XX-XX      XXXXXX  Data updates

2019-06-11      3.5001  Corrected international dialling data for Antarctic
                          research stations;
                        Cleaned up Unicode-spoor in some US operators' names;
                        Numerous new area codes in the US;
                        Doco clarification re incomplete numbers;
                        Data updates

2019-03-03      3.5000  Added operator data for almost all of the NANP;
                        Data updates

2018-12-05      3.4006  Expose libphonenumber's IDD prefix regexes
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/pull/89);
                        New NANP area codes for Jamaica and Canada;
                        Data updates

2018-06-19      3.4005  Improved formatting of UK mobile and pager numbers
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/75);
                        Reinstate Kosovo squatting on +377, +381, and +386, as the change-
                          over is apparently not yet complete;
                        Data updates

2018-04-10      3.4004  We now have some data from libphonenumber for Kosovo
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/66);
                        Kosovo has migrated to +383 so get rid of the special cases in +377 etc;
                        Bug-fix for when national prefix transforms apply
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/pull/87);
                        N::P::Country::Data is now mostly built from libphonenumber
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/34);
                        Corrected the Vatican's area code within the Italian numbering plan;
                        Added a special case for San Marino within the Italian numbering plan;
                        Data updates
